--- a/package.json
+++ b/package.json
@@ -137,7 +137,8 @@
   "devDependencies": {
     "coffee-script": "^1.12.4",
     "grunt": "^0.4.5",
-    "grunt-lunr-index-generator": "^0.1.3"
+    "grunt-lunr-index-generator": "^0.1.3",
+    "lunr": "^1.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
