--- a/package.json
+++ b/package.json
@@ -8,39 +8,39 @@
     "align-text": "^0.1.4",
     "ansi-regex": "^2.1.1",
     "ansi-styles": "^3.0.0",
-    "argparse": "^1.0.9",
     "array-find-index": "^1.0.2",
-    "async": "^2.2.0",
-    "balanced-match": "^0.4.2",
-    "buffer-shims": "^1.0.0",
+    "argparse": "^1.0.9",
+    "async": "^2.3.0",
     "browserify-zlib": "^0.1.4",
-    "brace-expansion": "^1.1.6",
+    "balanced-match": "^0.4.2",
+    "brace-expansion": "^1.1.7",
+    "buffer-shims": "^1.0.0",
     "builtin-modules": "^1.1.1",
-    "camelcase": "^4.0.0",
-    "camelcase-keys": "^4.0.0",
     "center-align": "^0.1.3",
+    "camelcase": "^4.1.0",
+    "camelcase-keys": "^4.1.0",
     "chalk": "^1.1.3",
-    "colors": "^1.1.2",
     "cliui": "^3.2.0",
+    "colors": "^1.1.2",
     "concat-map": "^0.0.1",
     "concat-stream": "^1.6.0",
     "core-util-is": "^1.0.2",
+    "dateformat": "^2.0.0",
     "decamelize": "^1.2.0",
     "currently-unhandled": "^0.4.1",
-    "dateformat": "^2.0.0",
     "deep": "^0.0.2",
     "define-properties": "^1.1.2",
     "dir": "^0.1.2",
     "error-ex": "^1.3.1",
     "escape-string-regexp": "^1.0.5",
     "esprima": "^3.1.3",
-    "eventemitter2": "^4.0.0",
+    "eventemitter2": "^4.1.0",
     "exit": "^0.1.2",
     "figures": "^2.0.0",
-    "find-up": "^2.1.0",
     "findup-sync": "^0.4.3",
     "foreach": "^2.0.5",
     "fs.realpath": "^1.0.0",
+    "find-up": "^2.1.0",
     "function-bind": "^1.1.0",
     "get-stdin": "^5.0.1",
     "getobject": "^0.1.0",
@@ -48,47 +48,49 @@
     "graceful-fs": "^4.1.11",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
+    "grunt-contrib-uglify": "^2.3.0",
+    "grunt-exec": "^2.0.0",
     "grunt-known-options": "^1.1.0",
-    "grunt-contrib-uglify": "^2.2.0",
-    "grunt-legacy-log-utils": "^1.0.0",
     "grunt-legacy-log": "^1.0.0",
+    "grunt-legacy-log-utils": "^1.0.0",
     "grunt-legacy-util": "^1.0.0",
     "gzip-size": "^3.0.0",
     "has-ansi": "^2.0.0",
     "hooker": "^0.2.3",
-    "hosted-git-info": "^2.4.1",
+    "hosted-git-info": "^2.4.2",
     "iconv-lite": "^0.4.15",
     "indent-string": "^3.1.0",
-    "inflight": "^1.0.6",
     "inherits": "^2.0.3",
     "is-arrayish": "^0.3.1",
     "is-buffer": "^1.1.5",
+    "inflight": "^1.0.6",
     "is-builtin-module": "^1.0.0",
     "is-finite": "^1.0.2",
-    "is-utf8": "^0.2.1",
     "isarray": "^2.0.1",
+    "is-utf8": "^0.2.1",
     "isexe": "^2.0.0",
-    "js-yaml": "^3.8.2",
+    "js-yaml": "^3.8.3",
     "jsonfile": "^2.4.0",
     "kind-of": "^3.1.0",
     "lazy-cache": "^2.0.2",
     "load-json-file": "^2.0.0",
     "lodash": "^4.17.4",
     "longest": "^1.0.1",
-    "loud-rejection": "^1.6.0",
+    "lunr": "^1.0.0",
     "map-obj": "^2.0.0",
+    "loud-rejection": "^1.6.0",
     "maxmin": "^2.1.0",
     "meow": "^3.7.0",
-    "minimatch": "^3.0.3",
     "minimist": "^1.2.0",
+    "minimatch": "^3.0.3",
     "nopt": "^4.0.1",
-    "null": "^1.0.1",
     "normalize-package-data": "^2.3.6",
+    "null": "^1.0.1",
     "number-is-nan": "^1.0.1",
     "object-assign": "^4.1.1",
+    "object-keys": "^1.0.11",
     "object.assign": "^4.0.4",
     "once": "^1.4.0",
-    "object-keys": "^1.0.11",
     "pako": "^1.0.5",
     "parse-json": "^2.2.0",
     "path-exists": "^3.0.0",
@@ -97,47 +99,46 @@
     "pify": "^2.3.0",
     "pinkie": "^2.0.4",
     "pinkie-promise": "^2.0.1",
-    "pretty-bytes": "^4.0.2",
     "process-nextick-args": "^1.0.7",
+    "pretty-bytes": "^4.0.2",
     "read-pkg": "^2.0.0",
     "read-pkg-up": "^2.0.0",
-    "redent": "^2.0.0",
-    "readable-stream": "^2.2.6",
+    "readable-stream": "^2.2.9",
     "repeat-string": "^1.6.1",
+    "redent": "^2.0.0",
     "repeating": "^3.0.0",
     "resolve": "^1.3.2",
     "right-align": "^0.1.3",
     "rimraf": "^2.6.1",
     "semver": "^5.3.0",
-    "signal-exit": "^3.0.2",
     "source-map": "^0.5.6",
     "spdx-correct": "^2.0.0",
+    "signal-exit": "^3.0.2",
     "spdx-expression-parse": "^1.0.4",
-    "spdx-license-ids": "^2.0.1",
     "sprintf-js": "^1.0.3",
+    "spdx-license-ids": "^2.0.1",
     "string_decoder": "^0.10.31",
     "strip-ansi": "^3.0.1",
     "strip-bom": "^3.0.0",
     "strip-indent": "^2.0.0",
     "supports-color": "^3.2.3",
-    "typedarray": "^0.0.6",
     "trim-newlines": "^1.0.0",
-    "uglify-js": "^2.8.16",
+    "typedarray": "^0.0.6",
+    "uglify-js": "^2.8.22",
     "uglify-to-browserify": "^1.0.2",
     "underscore.string": "^3.3.4",
     "uri-path": "^1.0.0",
     "util-deprecate": "^1.0.2",
-    "validate-npm-package-license": "^3.0.1",
     "which": "^1.2.14",
-    "window-size": "^0.3.0",
     "wordwrap": "^1.0.0",
-    "yargs": "^7.0.2",
-    "wrappy": "^1.0.2"
+    "window-size": "^0.3.0",
+    "wrappy": "^1.0.2",
+    "validate-npm-package-license": "^3.0.1",
+    "yargs": "^7.1.0"
   },
   "devDependencies": {
-    "coffee-script": "^1.12.4",
-    "grunt": "^0.4.5",
-    "grunt-lunr-index-generator": "^0.1.3",
+    "coffee-script": "^1.12.5",
+    "gulp": "^3.9.1",
     "lunr": "^1.0.0"
   },
   "scripts": {
@@ -145,7 +146,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/dhilst/dhilst.github.io.git"
+    "url": "git+https://github.com/dhilst/dhilst.github.io.git"
   },
   "keywords": [],
   "author": "",
