--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,50 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-title: D. Hilst's blog.
-email: danielhilst@gmail.com
-description: A humble online knowledge base.
+# Setup
+title: dhilst
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://dhilst.github.io" # the base hostname & protocol for your site
 github_username: dhilst
+paginate: 1
+baseurl: ""
+permalink: pretty
 
-# Build settings
-markdown: kramdown
+# Gems
+plugins:
+  - jekyll-gist
+  - jekyll-paginate
+  - jekyll-seo-tag
 
-gems:
-        - jekyll-gist
-        - jekyll-paginate
-
-paginate: 10
-
+# Optimize Jekyll
 exclude:
-        - Gruntfile.js
-        - jekyll.out
-        - package.json
-        - node_modules
+  - .editorconfig
+  - .git
+  - .jekyll-cache
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE.md
+  - README.md
+
+sass:
+  sass_dir: _sass
+  style: :compressed
+
+# Options
+
+# Replace this value and uncomment to enable Google Analytics tracking
+# ga_analytics: UA-000000-0
+
+# Specify the author for blog posts
+author:
+  name: Daniel Hilst Selli
+  url: https://twitter.com/geckones
+  email: danielhilst@gmai.com
+
+# Custom vars
+version: 3.0.0
+
+# Navbar page list
+nav:
+  - title: Blog
+    url: /archive
+
+  - title: About
+    url: /about
